crates/omnifs-itest/tests/linear/snapshots/team-browse__02-list-pntr.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 2: list /teams/PNTR
description.md  file  unknown  stable
issues  dir  -  -
item.json  file  200  dynamic
item.md  file  unknown  stable
name  file  unknown  stable
canonical:
  /teams/PNTR/description.md  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/item.json  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/item.md  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/name  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
fs:
  /teams/PNTR/name  file dynamic - 20 inline
invalidations:
  (none)
