crates/omnifs-itest/tests/linear/snapshots/team-browse__06-read-description-md.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: replayed
---
## step 6: read /teams/PNTR/description.md
attrs: dynamic - 20
bytes (20):
<redacted:74234e98>

canonical:
  /teams/PNTR/description.md  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/item.json  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/item.md  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
  /teams/PNTR/name  sha256:832396d8a065d5a08668c1a76fc5233484cd3da821266e18bdb5e134cd3505d5
fs:
  (none)
invalidations:
  (none)
